tests/snapshots/render_snapshots__command_palette_overlay.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | default | - | - | no dsn                                         
┌ [1] Explorer ┐[Cols] [Idx] [FK] [RLS] [DDL]                                   
│public.user   │┌ [2] Inspector ───────────────────────────────────────────────┐
│public.post   ││(select a table)                                              │
│public.comm   ││                                                              │
│              ││                                                              │
│              ││   ╭ Command Palette ─────────────────────╮                   │
│              ││   │  q / :quit          Quit application │                   │
│              ││   │  ? / :help          Show help        │                   │
│              ││   │  :sql               Open SQL Editor  │                   │
│              ││   │  :open-console      Open Console (pgc│                   │
│              │└───│  e / :erd           Open ER Diagram  │───────────────────┘
│              │┌ [3│  Ctrl+P             Open Table Picker│───────────────────┐
│              ││(se│  r                  Reload metadata  │                   │
│              ││   │                                      │                   │
│              ││   │                                      │                   │
│              ││   │                                      │                   │
│              ││   ╰ ↑↓ Navigate │ Enter Select │ Esc Clos╯                   │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
Esc:Close  Enter:Execute  ↑↓:Navigate
