tests/snapshots/render_snapshots__confirm_dialog_delete_active_connection.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                 ╭ Delete Connection ────────────────────────╮                │
│                 │ Delete "Production"?                      │                │
│                 │                                           │                │
│                 │ ⚠ This is the active connection.          │                │
│                 │ You will be disconnected.                 │────────────────┘
│                 │                                           │────────────────┐
│                 │ This action cannot be undone.             │                │
│                 │                                           │                │
│                 │                                           │                │
│                 ╰ Enter/Y: Confirm │ Esc/N: Cancel ─────────╯                │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
