tests/snapshots/render_snapshots__confirm_dialog_delete_inactive_connection.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ┐[Cols] [Idx] [FK] [RLS] [DDL]                                   
│ Press 'r' to │┌ [2] Inspector ───────────────────────────────────────────────┐
│              ││(select a table)                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││ ╭ Delete Connection ────────────────────────╮                │
│              ││ │             Delete "Staging"?             │                │
│              ││ │                                           │                │
│              │└─│       This action cannot be undone.       │────────────────┘
│              │┌ │                                           │────────────────┐
│              ││(│       [ Yes (Enter) ]   [ No (Esc) ]      │                │
│              ││ │                                           │                │
│              ││ │                                           │                │
│              ││ ╰ Enter/Y: Yes │ Esc/N: No ─────────────────╯                │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
Enter/y:Yes  Esc/n:No
