tests/snapshots/render_snapshots__confirm_dialog_update_preview.snap
---
source: tests/render_snapshots.rs
assertion_line: 825
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│public.users      │┌ [2] Inspector ───────────────────────────────────────────┐
│public.posts      ││Owner:   postgres                                         │
│public.comments   ││Comment: User accounts                                    │
│                  ││Rows:    ~100                                             │
│                  ││Schema:  public                                           │
│                  ││Table:   users                                            │
│                  ││                                                          │
│              ╭ Confirm UPDATE: users ──────────────────────────╮             │
│              │ email: "bob@example.com" -> "new@example.com"   │             │
│              │                                                 │─────────────┘
│              │ UPDATE "public"."users"                         │─────────────┐
│              │ SET "email" = 'new@example.com'                 │             │
│              │ WHERE "id" = '2';                               │             │
│              ╰ Enter: Confirm │ Esc: Cancel ───────────────────╯             │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
