tests/snapshots/render_snapshots__confirm_dialog_update_preview_rich.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│public.users      │┌ [2] Inspector ───────────────────────────────────────────┐
│public.posts      ││Owner:   postgres                                         │
│public.comments   ││Comment: User accounts                                    │
│                  ││Rows:    ~100                                             │
│                  ││Schema:  public                                           │
│            ╭ Confirm UPDATE: users ─────────────────────────────╮            │
│            │ Diff                                               │            │
│            │   email: "bob@example.com"  →  "new@example.com"   │            │
│            │                                                    │            │
│            │ SQL Preview                                        │────────────┘
│            │   UPDATE "public"."users"                          │────────────┐
│            │   SET "email" = 'new@example.com'                  │            │
│            │   WHERE "id" = '2';                                │            │
│            │                                                    │            │
│            ╰ Enter/Y: Confirm │ Esc/N: Cancel ──────────────────╯            │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
