tests/snapshots/render_snapshots__connection_error_collapsed.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ┐[Cols] [Idx] [FK] [RLS] [DDL]                                   
│ Press 'r' to │┌ [2] Inspector ───────────────────────────────────────────────┐
│              ││(select a table)                                              │
│              ││                                                              │
│              ││                                                              │
│           ╭ Connection Error ────────────────────────────────────╮           │
│           │✗ Could not resolve host                              │           │
│           │                                                      │           │
│           │Hint: Check the hostname                              │           │
│           │                                                      │           │
│           │▶ Details (press d to expand)                         │───────────┘
│           │                                                      │───────────┐
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │Actions:  e  Re-enter   d  Details   c  Copy   q  Quit│           │
│           ╰ Esc to close  q to quit ─────────────────────────────╯           │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
e:Edit  d:Details  c:Copy  Esc:Close  q:Quit
